@@ -21,6 +21,7 @@
 #else
 #define SIZEOF_SIZE_T 4
 #endif
+/* #undef HAVE_ALLOCA_H */
 
 #endif /* not R_CONFIG_H */
 
